--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,17 +7,25 @@ jobs:
     steps:
       - name: Update
         run: sudo apt update
+
       - name: Check out repository code
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Create virtual environment
         run: python -m venv venv
+
       - name: Install requirements
         run: |
           source venv/bin/activate
           pip install -r p1/requirement.txt
+          pip install django  # Ensure Django is installed
+
       - name: Execute tests
-        run: python p1/manage.py test app
+        run: |
+          source venv/bin/activate
+          python p1/manage.py test app
