--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,15 @@ name: Deploy to EC2 🚀
 on:
   push:
     branches:
-      - "main" # This triggers the workflow on push to any branch
+      - "main" # This triggers the workflow on push to the main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
@@ -17,8 +20,10 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             # Create a directory on the server if it doesn't exist
-             "mkdir -p /home/ubuntu/deployment"
+            mkdir -p /home/ubuntu/deployment
 
             # Copy project files to the server
             scp -r p1/* ubuntu@3.111.144.91:/home/ubuntu/deployment
-          
+            
+            # Restart services like Gunicorn
+            sudo systemctl restart gunicorn
