--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,15 +21,12 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.HOSTNAME }}
           EC2_USERNAME: ${{ secrets.USERNAME }}
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTNAME }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: |
-            # Create a directory on the server if it doesn't exist
-            mkdir -p /home/ubuntu/deployment
-          run: |
+        #uses: appleboy/ssh-action@master
+        #with:
+         # host: ${{ secrets.HOSTNAME }}
+          #username: ${{ secrets.USERNAME }}
+          #key: ${{ secrets.PRIVATE_KEY }}
+        run: |
             # Copy project files to the server
             scp -r p1/* $EC2_USERNAME@$EC2_HOST:/home/ubuntu/deployment
             
