--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,14 +10,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set up SSH key and whitelist EC2 IP address 🐻‍❄️
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan ${{ secrets.HOSTNAME }} >> ~/.ssh/known_hosts
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Create virtual environment
+        run: python -m venv venv
+
+      - name: Install requirements
+        run: |
+          source venv/bin/activate
+          pip install -r p1/requirement.txt
+
+      - name: Execute tests
+        run: |
+          source venv/bin/activate
+          python p1/manage.py test app
       - name: Deploy to server
+        if: success()
         env:
           EC2_HOST: ${{ secrets.HOSTNAME }}
           EC2_USERNAME: ${{ secrets.USERNAME }}
