--- a/.github/workflows/access-server.yml
+++ b/.github/workflows/access-server.yml
@@ -1,14 +1,14 @@
-name: Access server
-on: push
-jobs:
-  access_server:
-    name: Access server
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create a file
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTNAME }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: echo helloo world > hello.txt
+# name: Access server
+# on: push
+# jobs:
+#   access_server:
+#     name: Access server
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Create a file
+#         uses: appleboy/ssh-action@master
+#         with:
+#           host: ${{ secrets.HOSTNAME }}
+#           username: ${{ secrets.USERNAME }}
+#           key: ${{ secrets.PRIVATE_KEY }}
+#           script: echo helloo world > hello.txt
