--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,30 +1,30 @@
-name: Run tests
-on: push
-jobs:
-  execute_tests:
-    name: Install requirements and execute tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Update
-        run: sudo apt update
+# name: Run tests
+# on: push
+# jobs:
+#   execute_tests:
+#     name: Install requirements and execute tests
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Update
+#         run: sudo apt update
 
-      - name: Check out repository code
-        uses: actions/checkout@v4
+#       - name: Check out repository code
+#         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.10'
 
-      - name: Create virtual environment
-        run: python -m venv venv
+#       - name: Create virtual environment
+#         run: python -m venv venv
 
-      - name: Install requirements
-        run: |
-          source venv/bin/activate
-          pip install -r p1/requirement.txt
+#       - name: Install requirements
+#         run: |
+#           source venv/bin/activate
+#           pip install -r p1/requirement.txt
 
-      - name: Execute tests
-        run: |
-          source venv/bin/activate
-          python p1/manage.py test app
+#       - name: Execute tests
+#         run: |
+#           source venv/bin/activate
+#           python p1/manage.py test app
