--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,10 @@ jobs:
         run: |
           source venv/bin/activate
           pip install -r p1/requirement.txt
-
+      - name: Test Redis Connection
+        run: |
+            redis-cli -h localhost -p 6379 ping
+        continue-on-error: true
 
       - name: Execute tests
         run: |
