--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
           pip install -r p1/requirement.txt
       - name: Test Redis Connection
         run: |
+            source venv/bin/activate
+            python -m pip install --upgrade pip
+            pip install redis redis-cli
             redis-cli -h localhost -p 6379 ping
         continue-on-error: true
 
