--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
             source venv/bin/activate
             python -m pip install --upgrade pip
             pip install redis redis-cli
-            redis-cli -h localhost -p 6379 ping
+            redis-cli -h 65.2.177.148 -p 6379 ping
         continue-on-error: true
 
       - name: Execute tests
