--- a/fp1/package.json
+++ b/fp1/package.json
@@ -11,6 +11,7 @@
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-timezone-select": "^3.2.3",
     "web-vitals": "^2.1.4"
